feat: find user by id use case
